[package]
name = "cdn-seeder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
fx-callback = "2.0"
bytes = "1.12.0"
fx-torrent = { version = "0.9.1", features = ["tracing", "ed25519-dalek"] }
igd = { version = "0.12", features = ["aio", "tokio"] }
reqwest = { version = "0.13.4", features = ["rustls", "stream"] }
sha1 = "0.10"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
